--- a/index.html
+++ b/index.html
@@ -1,12 +1,25 @@
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>regex</title>
 </head>
 <body>
-    
+
+  <h1>mail encoder</h1>
+  <div class="input-container">
+      <input type="text" id="textInput" placeholder="input your text">
+      <button id="submitButton" onclick="gmailConveter(event)">Submit</button>
+  </div>
+
+  <section id="gmailResult">
+   
+  </section>
+  
 </body>
 <script src="script.js"></script>
 </html>
