modify the display

--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
   <title>regex</title>
 </head>
 <body>
@@ -16,9 +14,11 @@
       <button id="submitButton" onclick="gmailConveter(event)">Submit</button>
   </div>
 
-  <section id="gmailResult">
-   
-  </section>
+  <section id="gmailResult"></section>
+  <section id="test-result"></section>
+
+
+ 
   
 </body>
 <script src="script.js"></script>
